Moving "position:relative" to the .push_XX and .pull_XX classes directly, instead of .grid_XX -- This will mitigate some positioning and z-index issues with IE.

--- a/code/css/uncompressed/960.css
+++ b/code/css/uncompressed/960.css
@@ -36,9 +36,26 @@
 .grid_16 {
 	display: inline;
 	float: left;
-	position: relative;
 	margin-left: 10px;
 	margin-right: 10px;
+}
+
+.push_1, .pull_1,
+.push_2, .pull_2,
+.push_3, .pull_3,
+.push_4, .pull_4,
+.push_5, .pull_5,
+.push_6, .pull_6,
+.push_7, .pull_7,
+.push_8, .pull_8,
+.push_9, .pull_9,
+.push_10, .pull_10,
+.push_11, .pull_11,
+.push_12, .pull_12,
+.push_13, .pull_13,
+.push_14, .pull_14,
+.push_15, .pull_15 {
+	position: relative;
 }
 
 .container_12 .grid_3,
